[package]

name = "vigie"
version = "0.0.1"
authors = ["Pierre Baillet <pierre@baillet.name>"]

# homepage = "https://github.com/octplane/vigie"
description = "Vigis is a monitoring tool."
readme = "README.markdown"
keywords = ["daemon", "monitoring"]
license = "MIT"

[[bin]]

name = "vigie"

[build-dependencies]

linenoise-rust = "~0.0.1"
# yaml = "~0.0.6"
url = "0.2.5"
