[package]

name = "vigie"
version = "0.0.1"
authors = ["Pierre Baillet <pierre@baillet.name>"]

# homepage = "https://github.com/octplane/vigie"
description = "Vigis is a monitoring tool."
readme = "README.markdown"
keywords = ["daemon", "monitoring"]
license = "MIT"

[[bin]]

name = "vigie"

[dependencies]

linenoise-rust = "~0.1.0"
url = "0.2.5"

getopts = "~0.2.0"
rustc-serialize = "~0.2.8"
hyper = "0.1.10"
